tests/ui/dyn-compatibility/default-param-self-projection.stderr
error[E0393]: the type parameter `C` must be explicitly specified
  --> $DIR/default-param-self-projection.rs:13:17
   |
LL | trait A<C = <Self as D>::E> {}
   | --------------------------- type parameter `C` must be specified for this
...
LL |     let B: &dyn A = &();
   |                 ^
   |
   = note: because the parameter default references `Self`, the parameter must be specified on the object type
help: set the type parameter to the desired type
   |
LL |     let B: &dyn A<C> = &();
   |                  +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0393`.
